# personal-blog-render

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ecr_push.yml  main.yml
.github/workflows/ci/: cd.yaml
api/: app.py  test_app.py
static/: style.css
templates/: 404.html  500.html  about.html  index.html  post.html  postList.html  tags.html
