[tool.poetry]
name = "personal-blog-render"
version = "0.1.0"
description = ""
authors = ["icehongssii"]
readme = "README.md"
packages = [{include = "personal_blog_render"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
requests = "^2.31.0"
markdown2 = "^2.4.13"
pygments = "^2.17.2"
markdown = "^3.5.2"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pytest = "^8.1.1"
jinja2 = "^3.1.3"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
